DuPont DevSB/src/objects/Request__c.object
<CustomObject>
    <description>Multiple purpose Object where various Requests and Transaction Types can be created and tracked throughout the system</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account related to this Request</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Level_of_Effort_hours__c</fullName>
        <description>The Confirmed Level of Effort for Request.hours (i.e, 25, .5) dedicated to this activity.</description>
        <label>Actual Level of Effort (hours)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Potential revenue (or expense) at stake for this request</description>
        <inlineHelpText>Potential revenue (or expense) at stake for this request</inlineHelpText>
        <label>Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Comments__c</fullName>
        <description>Comments regarding the Request from the Applications</description>
        <label>Application Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Step__c</fullName>
        <label>Approval Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fully Approved</fullName>
                </value>
                <value>
                    <fullName>Pending First Approver</fullName>
                </value>
                <value>
                    <fullName>Rejected by Business Unit</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>Date Request was approved</description>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Case this Request originated from</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Main Contact this Request applies to</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback__c</fullName>
        <description>Feedback on the work done for the customer.</description>
        <inlineHelpText>Feedback on the work done for the customer.</inlineHelpText>
        <label>Customer Feedback</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Request being made</description>
        <inlineHelpText>Please describe the Technical Service being Requested</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>To identify when a specific Request is to be completed at the latest</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address only populated via workflow from the Contact or Lead related to this request.</description>
        <inlineHelpText>Email address only populated via workflow from the Contact or Lead related to this request.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exception_Request_Status__c</fullName>
        <description>This field will be used exclusively for the IB Sales Aid requests and will be used to trigger a mail when the request is approved</description>
        <label>Exception Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalRequestId__c</fullName>
        <description>CartId, SupplierPartAuxId in PunchOut requests</description>
        <label>External Request Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Supplier__c</fullName>
        <label>Fulfillment Supplier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Region__c</fullName>
        <description>Region of the world this Request is Associated to</description>
        <label>Geo Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Owning_Organization__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AP-Hong Kong</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>COLOMBIA</fullName>
                </value>
                <value>
                    <fullName>MALAYSIA</fullName>
                </value>
                <value>
                    <fullName>MEXICO</fullName>
                </value>
                <value>
                    <fullName>SINGAPORE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasAttachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <description>Instructions to successfully perform this Request</description>
        <label>Instructions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <description>Date license was issued</description>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>R00N30000001Uvb0EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level_of_Effort_hours__c</fullName>
        <description>The effort in hours or partial hours (i.e, 25, .5) dedicated to this activity.</description>
        <label>Level of Effort (hours)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_On_Label__c</fullName>
        <description>Notes that should be used or printed on the label or communication related to this request</description>
        <label>Notes On Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Nb__c</fullName>
        <description>ERP Order number</description>
        <label>Order Nb</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancelled by Customer</fullName>
                </value>
                <value>
                    <fullName>Complete Qualified</fullName>
                </value>
                <value>
                    <fullName>Complete Unqualified</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owning_Organization__c</fullName>
        <label>Owning Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DPP-Parts</fullName>
                </value>
                <value>
                    <fullName>DPP-Polymers</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>IB-Advanced Biofuels</fullName>
                </value>
                <value>
                    <fullName>IB-Bioactives-AN</fullName>
                </value>
                <value>
                    <fullName>IB-Bioactives-GP</fullName>
                </value>
                <value>
                    <fullName>IB-Bioactives-HPC</fullName>
                </value>
                <value>
                    <fullName>IB-Biomaterials</fullName>
                </value>
                <value>
                    <fullName>IB-Biorefineries-Biofuels</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority of Request</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Rush</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Details__c</fullName>
        <description>Details about the Product relevent to this Request</description>
        <label>Product Details</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact related to this request.</description>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requests (Related Contact)</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Details_rtf__c</fullName>
        <description>Rich Text field for Detail explanation of the Request copying in details from Emails, Pictures, etc.</description>
        <inlineHelpText>Rich Text field for copying in details from Emails, Pictures, etc.</inlineHelpText>
        <label>Request Details</label>
        <length>2500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Request_Items_Quantity__c</fullName>
        <description>Rollup Summary Total of Quantity for all Request Items for this request ; this total is only useful when all items have the same Unit of Measure (UOM)</description>
        <inlineHelpText>Summary of Total Qty being requested ; insure the same UOM for all request items</inlineHelpText>
        <label>Request Items Quantity</label>
        <summarizedField>Request_Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>Request_Item__c.Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Request_Items_Total_Closed__c</fullName>
        <label>Request Items Total Closed</label>
        <summaryFilterItems>
            <field>Request_Item__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Request_Item__c.Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Request_Items_Total__c</fullName>
        <label>Request Items Total</label>
        <summaryForeignKey>Request_Item__c.Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Request_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person who will work on Request</description>
        <inlineHelpText>Select Person Who will work on TSR</inlineHelpText>
        <label>Request Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Reason__c</fullName>
        <label>Request Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Request</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Shipping_City__c</fullName>
        <description>Request shipping city mapped from Contact or Lead Mailing Address by sControl</description>
        <label>Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Shipping_Country__c</fullName>
        <description>Request Shipping Country mapped from Contact or Lead Country by sControl</description>
        <label>Shipping Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Shipping_Postal_Code__c</fullName>
        <description>Request Shipping Postal code mapped from Contact or Lead Mailing address by sControl</description>
        <label>Shipping Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Shipping_State__c</fullName>
        <description>Request Shipping State mapped from Contact or Lead mailing address by sControl</description>
        <label>Shipping State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Shipping_Street__c</fullName>
        <description>Request Shipping Street mapped from Contact or Lead mailing address by sControl</description>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Completion_Date__c</fullName>
        <description>Used by Manager to prioritize the request</description>
        <label>Requested Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sample_Request_Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sample Request Catalog</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalog__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalog__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sample_Request_Notification_Recipient2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sample Request Notification Recipient2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sample_Request_Notification_Recipient__c</fullName>
        <label>Sample Request Notification Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sample_Request_Supplier__c</fullName>
        <label>Sample Request Supplier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_Company__c</fullName>
        <description>The Company to which the labels are delivered/shipped.</description>
        <label>Send to Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_Contact__c</fullName>
        <description>The Contact person who receives the labels.</description>
        <label>Send to Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Reason__c</fullName>
        <description>Reason why this request is in a specific Stage</description>
        <inlineHelpText>Reason why this request is in a specific Stage</inlineHelpText>
        <label>Stage Reason</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Particular phase or period in the life-cycle of this request</description>
        <inlineHelpText>Particular phase or period in the life-cycle of this request</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Capture</fullName>
                    <default>true</default>
                    <label>Capture</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Lab Approved</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Complete In ERP</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Abandonded</fullName>
                </value>
                <value>
                    <fullName>Filed</fullName>
                </value>
                <value>
                    <fullName>Letter Sent</fullName>
                </value>
                <value>
                    <fullName>Printed</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of Request</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Behind Schedule</fullName>
                </value>
                <value>
                    <fullName>In Approval</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>Error: Rejected by Supplier</fullName>
                </value>
                <value>
                    <fullName>Sent to Supplier</fullName>
                </value>
                <value>
                    <fullName>Accepted by Supplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>SubType</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>Biochemical Stability</fullName>
                </value>
                <value>
                    <fullName>Compatibility</fullName>
                </value>
                <value>
                    <fullName>Data Analysis</fullName>
                </value>
                <value>
                    <fullName>QA/QC</fullName>
                </value>
                <value>
                    <fullName>Analytical Support</fullName>
                </value>
                <value>
                    <fullName>Carbohydrate Processing</fullName>
                </value>
                <value>
                    <fullName>Fermentation Ethanol</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Form Recommendation</fullName>
                </value>
                <value>
                    <fullName>Form Prototype Prep</fullName>
                </value>
                <value>
                    <fullName>Stability</fullName>
                </value>
                <value>
                    <fullName>Onsite Technical Support</fullName>
                </value>
                <value>
                    <fullName>Customer Training</fullName>
                </value>
                <value>
                    <fullName>Customer Visit</fullName>
                </value>
                <value>
                    <fullName>Customer Joint Trials</fullName>
                </value>
                <value>
                    <fullName>Process Optimization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Datetime__c</fullName>
        <label>Submitted Datetime</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Details_rtf__c</fullName>
        <description>Rich Text field for Summary explanation Request copying in details from Emails, Pictures, etc.</description>
        <inlineHelpText>Rich Text field for copying in details from Emails, Pictures, etc.</inlineHelpText>
        <label>Summary Details</label>
        <length>2500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Value__c</fullName>
        <label>Total Estimated Value</label>
        <summarizedField>Request_Item__c.Estimated_Value__c</summarizedField>
        <summaryForeignKey>Request_Item__c.Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tracking_Numbers__c</fullName>
        <description>Comma Delimited list of all tracking number for this request.</description>
        <inlineHelpText>Comma Delimited list of all tracking number for this request.</inlineHelpText>
        <label>Tracking Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Aid</fullName>
                </value>
                <value>
                    <fullName>Technical Service Request</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Unit Price of product ordered</description>
        <label>Unit Price</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <description>Unit of Measure of product ordered</description>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>gram</fullName>
                </value>
                <value>
                    <fullName>ml</fullName>
                </value>
                <value>
                    <fullName>square foot</fullName>
                </value>
                <value>
                    <fullName>kg</fullName>
                </value>
                <value>
                    <fullName>each</fullName>
                </value>
                <value>
                    <fullName>hour</fullName>
                </value>
                <value>
                    <fullName>lb</fullName>
                </value>
                <value>
                    <fullName>square meter</fullName>
                </value>
                <value>
                    <fullName>ton, metric</fullName>
                </value>
                <value>
                    <fullName>day</fullName>
                </value>
                <value>
                    <fullName>cubic meter</fullName>
                </value>
                <value>
                    <fullName>liter</fullName>
                </value>
                <value>
                    <fullName>Milliliter</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fAccount_Type__c</fullName>
        <formula>Text (Account__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fERP_Account_Code__c</fullName>
        <formula>Contact__r.Account.ERP_Account_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Account Code</label>
        <type>Text</type>
    </fields>
</CustomObject>